<resources>
    <string name="app_name">Word Guesser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready_to">Get ready to ..</string>
    <string name="guess_the_word">Guess The Word!</string>
    <string name="play">PLAY</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got It</string>
    <string name="the_word_is">The word is ..</string>
    <string name="currentscore">CurrentScore : %d</string>
    <string name="your_final_score">Your Final Score :</string>
    <string name="play_again">PLAY AGAIN</string>
</resources>