<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.title.TitleFragment">


        <TextView
            android:id="@+id/ready_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_32"
            android:text="@string/get_ready_to"
            app:layout_constraintBottom_toTopOf="@+id/tagline_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tagline_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            android:text="@string/guess_the_word"
            android:textSize="@dimen/dimen_24"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ready_textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/dimen_32"
            android:layout_marginBottom="@dimen/dimen_24"
            android:text="@string/play"
            app:cornerRadius="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>